styled header further, worked on product page and about page#

--- a/products.html
+++ b/products.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link href="https://fonts.googleapis.com/css2?family=Berkshire+Swash&family=Roboto&display=swap" rel="stylesheet">
 	<link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
@@ -49,87 +50,108 @@
 <h1>Our products</h1>
 
 
-<h2>Good value every time</h2>
+<h2>Traditional family values</h2>
 
 <div id="myBtnContainer">
   <button class="btn active" onclick="filterSelection('all')"> Show all</button>
   <button class="btn" onclick="filterSelection('bath-bombs')"> Bath-bombs</button>
-  <button class="btn" onclick="filterSelection('Body lotions')"> Body lotions</button>
+  <button class="btn" onclick="filterSelection('Body-lotions')"> Body lotions</button>
   <button class="btn" onclick="filterSelection('clamshells')"> clamshells</button>
-  <button class="btn" onclick="filterSelection('perfume sprays')"> perfume sprays</button>
-  <button class="btn" onclick="filterSelection('Reed Diffuser Refills')"> Reed Diffuser Refills</button>
-  <button class="btn" onclick="filterSelection('Room Sprays')"> Room Sprays</button>
-  <button class="btn" onclick="filterSelection('Wax Melts')"> Wax Melts</button>
+  <button class="btn" onclick="filterSelection('perfume-sprays')"> perfume sprays</button>
+  <button class="btn" onclick="filterSelection('Reed-Diffuser-Refills')"> Reed Diffuser Refills</button>
+  <button class="btn" onclick="filterSelection('Room-Sprays')"> Room Sprays</button>
+  <button class="btn" onclick="filterSelection('Wax-Melts')"> Wax Melts</button>
   
 </div>
 
 <!-- Portfolio Gallery Grid -->
+
 <div class="row">
-  <div class="column bath-bombs">
+  <div class="column bath-bombs col-md-4">
     <div class="content">
-      <img src="../assets/product-images/bath-bombs/rosejam.jpg" alt="slide1" style="width:100%">
-      <h4>Rosejam bathbomb</h4>
+    <div class="thumbnail">
+      <img src="../assets/product-images/bath-bombs/rosejam.jpg" alt="slide1" class="pic" style="width:100%;">
+      </div>
+      <h4>Rosejam bathbomb</h4> 
       <p>Boom in your bathroom...</p>
     </div>
   </div>
-  <div class="column Body lotions">
+  <div class="column Body-lotions col-md-4">
     <div class="content">
-    <img src="../assets/product-images/Body lotions/saltedcaramel.jpg" alt="slide2" style="width:100%">
+    <div class="thumbnail">
+    <img src="../assets/product-images/Body-lotions/saltedcaramel.jpg" alt="slide2" class="pic" style="width:100%;">
+    </div>
       <h4>Salted caramel body lotion</h4>
       <p>Here's the rub...</p>
     </div>
   </div>
-  <div class="column clamshells">
+  <div class="column clamshells col-md-4">
     <div class="content">
-    <img src="../assets/product-images/clamshells/aliens.jpg" alt="slide3" style="width:100%">
+    <div class="thumbnail">
+    <img src="../assets/product-images/clamshells/aliens.jpg" alt="slide3" class="pic" style="width:100%;">
+    </div>
       <h4>Aliens clamshell</h4>
       <p>We're not shelfish...</p>
     </div>
   </div>
+ 
   
-  <div class="column perfume sprays">
+  
+  <div class="column perfume-sprays col-md-4">
     <div class="content">
-       <img src="../assets/product-images/perfume sprays/aliens 1 x 1.jpg" alt="slide4" style="width:100%">
-      <h4>Aliens perfume </h4>
+    <div class="thumbnail">
+       <img src="../assets/product-images/perfume-sprays/aliens 1 x 1.jpg" alt="slide4" class="pic" style="width:100%;">
+       </div>
       <p>Spray it again...</p>
     </div>
   </div>
-  <div class="column Reed Diffuser Refills">
+  <div class="column Reed-Diffuser-Refills col-md-4">
     <div class="content">
-    <img src="../assets/product-images/Reed Diffuser Refills/Linen Fresh.jpg" alt="slide5" style="width:100%">
+    <div class="thumbnail">
+    <img src="../assets/product-images/Reed-Diffuser-Refills/Linen Fresh.jpg" alt="slide5" class="pic" style="width:100%;">
+    </div>
       <h4>Linen fresh diffuser refill</h4>
       <p>Reed more here...</p>
     </div>
   </div>
-  <div class="column Room Sprays">
+  <div class="column Room-Sprays col-md-4">
     <div class="content">
-    <img src="../assets/product-images/Room Sprays/angels.jpg" alt="slide6" style="width:100%">
-      <h4>Angels room spray</h4>
+    <div class="thumbnail">
+    <img src="../assets/product-images/Room-Sprays/angels.jpg" alt="slide6" class="pic" style="width:100%;">
+    </div>
+    <h4>Angels room spray</h4>
       <p>All in a spray's  work..</p>
     </div>
   </div>
 
-  <div class="column Wax Melts">
+<div class="row">
+  <div class="column Wax Melts col-md-4">
     <div class="content">
-      <img src="../assets/product-images/Wax Melts/black orchid1 x 1.jpg" alt="Wax Melts" style="width:100%">
+    <div class="thumbnail">
+      <img src="../assets/product-images/Wax-Melts/black orchid1 x 1.jpg" alt="Wax Melts" class="pic" style="width:100%;">
+      </div>
       <h4>Black orchid wax melts</h4>
       <p>Let's wax lyrical..</p>
     </div>
   </div>
-  <div class="column people">
+  <div class="column people col-md-4">
     <div class="content">
-    <img src="/w3images/people2.jpg" alt="Car" style="width:100%">
-      <h4>Man</h4>
+    <div class="thumbnail">
+    <img src="../assets/product-images/Wax-Melts/black orchid1 x 1.jpg" alt="Wax Melts" class="pic" style="width:100%;">
+    </div>
       <p>Lorem ipsum dolor..</p>
     </div>
   </div>
-  <div class="column people">
+  <div class="column peoplecol-md-4">
     <div class="content">
-    <img src="/w3images/people3.jpg" alt="Car" style="width:100%">
+    <div class="thumbnail">
+    <img src="../assets/product-images/Wax-Melts/black orchid1 x 1.jpg" alt="Wax Melts" class="pic" style="width:100%;">
+    </div>
       <h4>Woman</h4>
       <p>Lorem ipsum dolor..</p>
     </div>
   </div>
+</div>
 <!-- END GRID -->
 </div>
 
