--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
   <body>
     <header>
   <div class="header">
-  <a href="index.html" class="logo"> <img src="../assets/images/WOE_Overlay.png" ></a>
+  <a href="index.html" class="logo"> <img src="../assets/images/WOE_Overlay.png" alt="logo">  </a>
   <div class="header-right">
     <a  href="index.html">Home</a>
     <a href="contact.html">Contact</a>
@@ -44,6 +44,7 @@
     </header>
 
     <section>
+    <div class="main">
     <div class="intro">
       <div class="container-fluid">
         <div class="row">
@@ -76,18 +77,21 @@
         
 
     </div>
+    <div class="about">
             <div class="row">
-  <div class="column">
+  <div class="column col-md-4">
     <img src="../assets/images/multi1.jpg" alt="multi1" style="width:100%">
   </div>
-  <div class="column">
-    <img src="../assets/images/multi2.jpg" alt="multi1" style="width:100%">
+  <div class="column col-md-4">
+    <img src="../assets/images/multi2.jpg" alt="multi2" style="width:100%">
   </div>
-  <div class="column">
+  <div class="column col-md-4">
     <img src="../assets/images/multi3.jpg" alt="multi3" style="width:100%">
   </div>
 </div>
+</div>
 
+      </div>
       </div>
     </section>
     <footer></footer>
