jumbotrons added to about page. more products added to products page

--- a/about.html
+++ b/about.html
@@ -43,35 +43,46 @@
 </div>
     </header>
 
-    <section>
+    <section>    
     <div class="main">
+    <div class="jumbotron">
     <div class="intro">
       <div class="container-fluid">
         <div class="row">
           <div class="col-md-12">
             <div class="intro">
-              <h1>Welcome friend</h1>
-              <p class="text-muted">Thanks for stopping by.</p>
+              <h1 class="display-4">Welcome friend</h1>
+              <p class="lead">Thanks for stopping by.</p>
               <p>We hope you enjoy our website and of course, our products!</p>
+              <a class="btn btn-custom btn-lg" href="products.html" role="button">Discover more</a>
+</div>
+</div>
             </div>
           </div>
         </div>
+      </div>
 
         <div class="row">
           <div class="col-md-6 overflow-auto">
-            <p>
-              We will provide you with top quality products from our
+ <div class="jumbotron">
+ <div class="intro">
+            <p class="display-5">
+              We  provide you top quality products from our
               ever-expanding range. We are a family-run business and can assure
               you of the very best products at the very best prices.
             </p>
           </div>
-
+          </div>
+          </div>
           <div class="col-md-6 overflow-auto">
-            <p>
+          <div class="jumbotron">
+ <div class="intro">
+            <p class="display-5">
               Every single customer is important to us, we want you to be
               satisfied so you will come back again and hopefully tell your
               friends about us.We have no strangers on here we have friends old & new.Drop us a line, we love to hear from you.
             </p>
+          </div>
           </div>
           </div>
         
@@ -92,7 +103,7 @@
 </div>
 
       </div>
-      </div>
+      
     </section>
     <footer></footer>
   </body>
