--- a/products.html
+++ b/products.html
@@ -34,7 +34,7 @@
 <h1>Our products</h1>
 
 
-<h2>Traditional family values</h2>
+<h2>made with traditional family values</h2>
 
 <div id="myBtnContainer">
   <button class="btn active" onclick="filterSelection('all')"> Show all</button>
@@ -78,6 +78,7 @@
   <div class="column perfume_sprays">
     <div class="content">
        <img src="../assets/product_images/perfume_sprays/aliens_lo 1 x 1.jpg" alt="slide4" class="pic" style="width:100%;">
+      <h4>Aliens perfume</h4>
       <p>Spray it again...</p>
     </div>
   </div>
@@ -97,150 +98,40 @@
   </div>
   <div class="column Wax_Melts">
     <div class="content">
-      <img src="../assets/product_images/Wax_Melts/black orchid1 x 1.jpg" alt="Wax Melts" class="pic" style="width:100%;">
+      <img src="../assets/product_images/Wax_Melts/black_orchid 1 x 1.jpg" alt="Wax Melts" class="pic" style="width:100%;">
       <h4>Black orchid wax melts</h4>
       <p>Let's wax lyrical..</p>
     </div>
   </div>
-  <div class="column">
+  <div class="column bath_bombs">
     <div class="content">
-    <img src="../assets/product_images/Wax-Melts/black orchid1 x 1.jpg" alt="Wax Melts" class="pic" style="width:100%;">
-      <p>Lorem ipsum dolor..</p>
+    <img src="../assets/product_images/bath_bombs/watermelon.jpg" alt="Wax Melts" class="pic" style="width:100%;">
+      <h4>Watermelon bathbomb</h4> 
+      <p>Tick,tick boom..</p>
     </div>
-  </div>
-  <div class="column">
-    <div class="content">
-    <img src="../assets/product_images/Wax-Melts/black orchid1 x 1.jpg" alt="Wax Melts" class="pic" style="width:100%;">
-      <h4>Woman</h4>
-      <p>Lorem ipsum dolor..</p>
-  </div>
   </div>
  
-<!-- END GRID -->
-</div>
-
-<!-- END MAIN -->
-</div>
-	</section>
-	<footer></footer>
-<script>
-filterSelection("all")
-function filterSelection(c) {
-  var x, i;
-  x = document.getElementsByClassName("column");
-  if (c == "all") c = "";
-  for (i = 0; i < x.length; i++) {
-    w3RemoveClass(x[i], "show");
-    if (x[i].className.indexOf(c) > -1) w3AddClass(x[i], "show");
-  }
-}
-
-function w3AddClass(element, name) {
-  var i, arr1, arr2;
-  arr1 = element.className.split(" ");
-  arr2 = name.split(" ");
-  for (i = 0; i < arr2.length; i++) {
-    if (arr1.indexOf(arr2[i]) == -1) {element.className += " " + arr2[i];}
-  }
-}
-
-function w3RemoveClass(element, name) {
-  var i, arr1, arr2;
-  arr1 = element.className.split(" ");
-  arr2 = name.split(" ");
-  for (i = 0; i < arr2.length; i++) {
-    while (arr1.indexOf(arr2[i]) > -1) {
-      arr1.splice(arr1.indexOf(arr2[i]), 1);     
-    }
-  }
-  element.className = arr1.join(" ");
-}
-
-
-// Add active class to the current button (highlight it)
-var btnContainer = document.getElementById("myBtnContainer");
-var btns = btnContainer.getElementsByClassName("btn");
-for (var i = 0; i < btns.length; i++) {
-  btns[i].addEventListener("click", function(){
-    var current = document.getElementsByClassName("active");
-    current[0].className = current[0].className.replace(" active", "");
-    this.className += " active";
-  });
-}
-</script>
-</body>
-
-</html>
-
-<!-- Portfolio Gallery Grid -->
-
-<div class="row">
-  <div class="column bath-bombs">
-    <div class="content">
-      <img src="../assets/product-images/bath-bombs/rosejam.jpg" alt="slide1" class="pic" style="width:100%;">
-      <h4>Rosejam bathbomb</h4> 
-      <p>Boom in your bathroom...</p>
-    </div>
-
-  <div class="column Body-lotions">
-    <div class="content">
-    <img src="../assets/product-images/Body-lotions/saltedcaramel.jpg" alt="slide2" class="pic" style="width:100%;">
-      <h4>Salted caramel body lotion</h4>
-      <p>Here's the rub...</p>
-  </div>
   <div class="column clamshells">
     <div class="content">
-    <img src="../assets/product-images/clamshells/aliens.jpg" alt="slide3" class="pic" style="width:100%;">
-      <h4>Aliens clamshell</h4>
-      <p>We're not shelfish...</p>
+    <img src="../assets/product_images/clamshells/black_orchid.jpg" alt="slide3" class="pic" style="width:100%;">
+      <h4>Black orchid clamshell</h4>
+      <p>...</p>
     </div>
   </div>
- 
-  
-  
-  <div class="column perfume-sprays">
+ <div class="column perfume_sprays">
     <div class="content">
-       <img src="../assets/product-images/perfume-sprays/aliens 1 x 1.jpg" alt="slide4" class="pic" style="width:100%;">
-      <p>Spray it again...</p>
+       <img src="../assets/product_images/perfume_sprays/black_orchid 1 x 1.jpg" alt="slide4" class="pic" style="width:100%;">
+      <h4>Black orchid perfume</h4>
+      <p>Spray you love me...</p>
     </div>
   </div>
-  <div class="column Reed-Diffuser-Refills">
+   <div class="column Reed_Diffuser_Refills">
     <div class="content">
-    <img src="../assets/product-images/Reed-Diffuser-Refills/Linen Fresh.jpg" alt="slide5" class="pic" style="width:100%;">
-      <h4>Linen fresh diffuser refill</h4>
-      <p>Reed more here...</p>
+    <img src="../assets/product_images/Reed_Diffuser_Refills/comforts_strawberry_and_lilly_kiss.jpg" alt="slide5" class="pic" style="width:100%;">
+      <h4>Comforts strawberry and lilly kiss diffuser refill</h4>
+      <p>Reed all about it...</p>
     </div>
   </div>
-  <div class="column Room-Sprays">
-    <div class="content">
-    <img src="../assets/product-images/Room-Sprays/angels.jpg" alt="slide6" class="pic" style="width:100%;">
-    <h4>Angels room spray</h4>
-      <p>All in a spray's  work..</p>
-    </div>
-  </div>
-  <div class="column Wax-Melts">
-    <div class="content">
-      <img src="../assets/product-images/Wax-Melts/black orchid1 x 1.jpg" alt="Wax Melts" class="pic" style="width:100%;">
-      <h4>Black orchid wax melts</h4>
-      <p>Let's wax lyrical..</p>
-    </div>
-  </div>
-  <div class="column">
-    <div class="content">
-    <img src="../assets/product-images/Wax-Melts/black orchid1 x 1.jpg" alt="Wax Melts" class="pic" style="width:100%;">
-      <p>Lorem ipsum dolor..</p>
-    </div>
-  </div>
-  <div class="column">
-    <div class="content">
-    <img src="../assets/product-images/Wax-Melts/black orchid1 x 1.jpg" alt="Wax Melts" class="pic" style="width:100%;">
-      <h4>Woman</h4>
-      <p>Lorem ipsum dolor..</p>
-  </div>
-  </div>
-  </div>
-  </div>
- 
 <!-- END GRID -->
 </div>
 
@@ -294,5 +185,4 @@ for (var i = 0; i < btns.length; i++) {
 }
 </script>
 </body>
-
 </html>
