--- a/products.html
+++ b/products.html
@@ -77,14 +77,14 @@
   
   <div class="column perfume_sprays">
     <div class="content">
-       <img src="../assets/product_images/perfume_sprays/aliens_lo 1 x 1.jpg" alt="slide4" class="pic" style="width:100%;">
+       <img src="../assets/product_images/perfume_sprays/aliens 1 x 1.jpg" alt="slide4" class="pic" style="width:100%;">
       <h4>Aliens perfume</h4>
       <p>Spray it again...</p>
     </div>
   </div>
   <div class="column Reed_Diffuser_Refills">
     <div class="content">
-    <img src="../assets/product_images/Reed_Diffuser_Refills/Linen Fresh.jpg" alt="slide5" class="pic" style="width:100%;">
+    <img src="../assets/product_images/Reed_Diffuser_Refills/Linen_Fresh.jpg" alt="slide5" class="pic" style="width:100%;">
       <h4>Linen fresh diffuser refill</h4>
       <p>Reed more here...</p>
     </div>
