corrected file paths to images

--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
   <body>
     <header>
   <div class="header">
-  <a href="index.html" class="logo"> <img src="../assets/images/WOE_Overlay.png" alt="logo">  </a>
+  <a href="index.html" class="logo"> <img src="assets/images/WOE_Overlay.png" alt="logo">  </a>
   <div class="header-right">
     <a  href="index.html">Home</a>
     <a href="contact.html">Contact</a>
@@ -74,7 +74,7 @@
           </div>
           </div>
           </div>
-          <div class="col-md-6 overflow-hidden">
+          <div class="col-md-6 ">
           <div class="jumbotron">
  <div class="intro">
             <p class="display-5">
@@ -91,13 +91,13 @@
     <div class="about">
             <div class="row">
   <div class="column col-md-4">
-    <img src="../assets/images/multi1.jpg" alt="multi1" style="width:100%">
+    <img src="assets/images/multi1.jpg" alt="multi1" style="width:100%">
   </div>
   <div class="column col-md-4">
-    <img src="../assets/images/multi2.jpg" alt="multi2" style="width:100%">
+    <img src="assets/images/multi2.jpg" alt="multi2" style="width:100%">
   </div>
   <div class="column col-md-4">
-    <img src="../assets/images/multi3.jpg" alt="multi3" style="width:100%">
+    <img src="assets/images/multi3.jpg" alt="multi3" style="width:100%">
   </div>
 </div>
 </div>
