--- a/products.html
+++ b/products.html
@@ -19,7 +19,7 @@
 <body>
 	 <header>
   <div class="header">
-  <a href="index.html" class="logo"> <img src="../assets/images/WOE_Overlay.png" alt="logo" ></a>
+  <a href="index.html" class="logo"> <img src="assets/images/WOE_Overlay.png" alt="logo" ></a>
   <div class="header-right">
     <a  href="index.html">Home</a>
     <a href="contact.html">Contact</a>
@@ -53,21 +53,21 @@
 <div class="row">
   <div class="column bath_bombs">
     <div class="content">
-      <img src="../assets/product_images/bath_bombs/rosejam.jpg" alt="slide1" class="pic" style="width:100%;">
+      <img src="assets/product_images/bath_bombs/rosejam.jpg" alt="slide1" class="pic" style="width:100%;">
       <h4>Rosejam bathbomb</h4> 
       <p>Boom in your bathroom...</p>
     </div>
   </div>
   <div class="column Body_lotions">
     <div class="content">
-    <img src="../assets/product_images/Body_lotions/saltedcaramel.jpg" alt="slide2" class="pic" style="width:100%;">
+    <img src="assets/product_images/Body_lotions/saltedcaramel.jpg" alt="slide2" class="pic" style="width:100%;">
       <h4>Salted caramel body lotion</h4>
       <p>Here's the rub...</p>
   </div>
   </div>
   <div class="column clamshells">
     <div class="content">
-    <img src="../assets/product_images/clamshells/aliens.jpg" alt="slide3" class="pic" style="width:100%;">
+    <img src="assets/product_images/clamshells/aliens.jpg" alt="slide3" class="pic" style="width:100%;">
       <h4>Aliens clamshell</h4>
       <p>We're not shelfish...</p>
     </div>
@@ -77,35 +77,35 @@
   
   <div class="column perfume_sprays">
     <div class="content">
-       <img src="../assets/product_images/perfume_sprays/aliens 1 x 1.jpg" alt="slide4" class="pic" style="width:100%;">
+       <img src="assets/product_images/perfume_sprays/aliens 1 x 1.jpg" alt="slide4" class="pic" style="width:100%;">
       <h4>Aliens perfume</h4>
       <p>Spray it again...</p>
     </div>
   </div>
   <div class="column Reed_Diffuser_Refills">
     <div class="content">
-    <img src="../assets/product_images/Reed_Diffuser_Refills/Linen_Fresh.jpg" alt="slide5" class="pic" style="width:100%;">
+    <img src="assets/product_images/Reed_Diffuser_Refills/Linen_Fresh.jpg" alt="slide5" class="pic" style="width:100%;">
       <h4>Linen fresh diffuser refill</h4>
       <p>Reed more here...</p>
     </div>
   </div>
   <div class="column Room_Sprays">
     <div class="content">
-    <img src="../assets/product_images/Room_Sprays/angels.jpg" alt="slide6" class="pic" style="width:100%;">
+    <img src="assets/product_images/Room_Sprays/angels.jpg" alt="slide6" class="pic" style="width:100%;">
     <h4>Angels room spray</h4>
       <p>All in a spray's  work..</p>
     </div>
   </div>
   <div class="column Wax_Melts">
     <div class="content">
-      <img src="../assets/product_images/Wax_Melts/black_orchid 1 x 1.jpg" alt="Wax Melts" class="pic" style="width:100%;">
+      <img src="assets/product_images/Wax_Melts/black_orchid 1 x 1.jpg" alt="Wax Melts" class="pic" style="width:100%;">
       <h4>Black orchid wax melts</h4>
       <p>Let's wax lyrical..</p>
     </div>
   </div>
   <div class="column bath_bombs">
     <div class="content">
-    <img src="../assets/product_images/bath_bombs/watermelon.jpg" alt="Wax Melts" class="pic" style="width:100%;">
+    <img src="assets/product_images/bath_bombs/watermelon.jpg" alt="Wax Melts" class="pic" style="width:100%;">
       <h4>Watermelon bathbomb</h4> 
       <p>Tick,tick boom..</p>
     </div>
@@ -113,9 +113,9 @@
  
   <div class="column clamshells">
     <div class="content">
-    <img src="../assets/product_images/clamshells/black_orchid.jpg" alt="slide3" class="pic" style="width:100%;">
+    <img src="assets/product_images/clamshells/black_orchid.jpg" alt="slide3" class="pic" style="width:100%;">
       <h4>Black orchid clamshell</h4>
-      <p>...</p>
+      <p>I am what I clam...</p>
     </div>
   </div>
  <div class="column perfume_sprays">
