--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
 <body>
 	 <header>
   <div class="header">
-  <a href="index.html" class="logo"> <img src="../assets/images/WOE_Overlay.png" ></a>
+  <a href="index.html" class="logo"> <img src="assets/images/WOE_Overlay.png" ></a>
   <div class="header-right">
     <a href="index.html">Home</a>
     <a class="active" href="contact.html">Contact</a>
